# chronosphere

./: README.md  pyproject.toml
src/chronosphere/: config.py  config.toml  main.py  schema.py  templates.py
src/chronosphere/db/: __init__.py  crud.py  supabase.py
src/chronosphere/static/js/: constants.js  register.js
src/chronosphere/templates/: base.html
src/chronosphere/templates/pages/: index.html  register.html
