[project]
name = "chronosphere"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "f0ur", email = "5292268+f0ursqu4r3@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "bcrypt>=4.2.0",
    "supabase>=2.9.0",
    "tomli>=2.0.2",
    "pydantic>=2.9.2",
    "python-box[tomli_w]>=7.2.0",
    "jinja2>=3.1.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL3"}


[tool.pdm]
distribution = false
